<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mysociety.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_complaints"
        android:name="com.example.mysociety.ui.complaints.complaintsFragment"
        android:label="@string/menu_Complaints"
        tools:layout="@layout/fragment_complaints" />

    <fragment
        android:id="@+id/nav_bookfacility"
        android:name="com.example.mysociety.ui.bookfacility.bookfacilityFragment"
        android:label="@string/menu_bookfacility"
        tools:layout="@layout/fragment_bookfacility" />


    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.mysociety.ui.notification.notificationFragment"
        android:label="@string/menu_Notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_maintanance"
        android:name="com.example.mysociety.ui.maintanance.maintananceFragment"
        android:label="@string/menu_Maintanance"
        tools:layout="@layout/fragment_maintanance" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.mysociety.ui.feedback.feedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mysociety.ui.profile.profileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>